--- a/src/google/res/values-ru/strings.xml
+++ b/src/google/res/values-ru/strings.xml
@@ -1012,4 +1012,5 @@
     <string name="invite_friend_button">Пригласить</string>
     <string name="invitation_sended_button">Отправлено</string>
     <string name="friends_empty_list_error">Список ваших друзей пуст</string>
+    <string name="vk_friends_success_invite">Приглашение отправлено</string>
 </resources>
