--- a/src/google/res/values-ru/strings.xml
+++ b/src/google/res/values-ru/strings.xml
@@ -1013,4 +1013,5 @@
     <string name="invitation_sended_button">Отправлено</string>
     <string name="friends_empty_list_error">Список ваших друзей пуст</string>
     <string name="vk_friends_success_invite">Приглашение отправлено</string>
+    <string name="join_group_success">Вы вступили в группу</string>
 </resources>
