--- a/src/google/res/values/strings.xml
+++ b/src/google/res/values/strings.xml
@@ -826,4 +826,5 @@
     <string name="invite_friend_button">Invite</string>
     <string name="invitation_sended_button">Sent</string>
     <string name="friends_empty_list_error">Your list of friends is empty</string>
+    <string name="join_group_success">You have joined the group</string>
 </resources>
