--- a/src/google/res/values/strings.xml
+++ b/src/google/res/values/strings.xml
@@ -831,4 +831,7 @@
     <string name="join_group_success">You have joined the group</string>
     <string name="settings_auto_greeting_title">Auto-Greetings</string>
     <string name="settings_auto_greeting_subtitle">Allow Topface to automatically start a conversation with a greeting whenever someone sends you a Like</string>
+    <string name="chat_auto_reply_title">Message\'s text is hidden</string>
+    <string name="chat_auto_reply_message">In order to open/reply to this message, become a VIP</string>
+    <string name="chat_auto_reply_button">Become VIP</string>
 </resources>
