--- a/src/ifree/res/values/strings.xml
+++ b/src/ifree/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="address_book_access_error">This app does not have access to your contacts. You can
         allow access via the Privacy Settings of your device.
     </string>
+    <string name="camera_access_error">Application does not have access to the camera. You can grant access in your device\'s Privacy Settings.</string>
     <string name="profile_deleted_user">User has been deleted</string>
     <string name="filter_main_parameters">I am interested in</string>
     <string name="dating_prev_button_ext">Previous</string>
@@ -538,9 +539,7 @@
     <string name="buy_status_and_watch_your_fans">Get VIP-status and find out who added you to their
         favorites.
     </string>
-    <string name="add_bookmarks_to_be_connected">Add new contacts to this section and you\'ll never
-        lose touch with them.
-    </string>
+    <string name="add_bookmarks_to_be_connected">Add new contacts to this section and you will never lose touch with them.</string>
     <string name="nobody_chat_with_you_sympathies_will_help">No one has written to you yet! Likes
         will help you find someone to chat with!
     </string>
@@ -821,4 +820,22 @@
     </string>
     <string name="go_dating_message">Start getting to know people and here will appear the names of those users who visited your profile.</string>
     <string name="photo_not_from_main_album">A moderator has decided that this photo may not be used as a profile photo.</string>
+    <string name="sidebar_vk_profile">VK Profile</string>
+    <string name="title_vk_profile">VK Profile</string>
+    <string name="vk_profile_button_tf_group">Topface group</string>
+    <string name="vk_profile_button_join_tf_group">Join the Topface group</string>
+    <string name="vk_profile_button_join_vkgames_group">Join the group \"VK games\"</string>
+    <string name="vk_profile_button_invite_friends">Invite friends</string>
+    <string name="vk_profile_invite_friends_title">Invite friends</string>
+    <string name="invite_friend_button">Invite</string>
+    <string name="invitation_sended_button">Sent</string>
+    <string name="friends_empty_list_error">Your list of friends is empty</string>
+    <string name="join_group_success">You have joined the group</string>
+    <string name="foreign_profile_empty_gifts_title">Send a gift and you\'ll be the center of attention</string>
+    <string name="vk_friends_success_invite">Invitation has been sent</string>
+    <string name="settings_auto_greeting_title">Auto-Greetings</string>
+    <string name="settings_auto_greeting_subtitle">Allow Topface to automatically start a conversation with a greeting whenever someone sends you a Like</string>
+    <string name="chat_auto_reply_title">Message\'s text is hidden</string>
+    <string name="chat_auto_reply_message">In order to open/reply to this message, become a VIP</string>
+    <string name="chat_auto_reply_button">Become VIP</string>
 </resources>
