--- a/src/google/res/values-ru/strings.xml
+++ b/src/google/res/values-ru/strings.xml
@@ -1034,4 +1034,6 @@
     <string name="chat_auto_reply_message">Чтобы открыть и ответить на него, станьте VIP-пользователем</string>
     <string name="chat_auto_reply_button">Стать VIP</string>
     
+    <string name="photo_list_load_info">Поделитесь фотографиями и вас увидят миллионы</string>
+
 </resources>
