Update strings for upload-photo-screen

--- a/src/google/res/values-ru/strings.xml
+++ b/src/google/res/values-ru/strings.xml
@@ -30,8 +30,8 @@
     <string name="likes_background_text">Нет симпатий</string>
 
     <string name="visitors_background_text">Нет гостей</string>
-    <string name="need_set_avatar">С вами никто не может познакомиться! Установите фото на аватар.
-    </string>
+    <string name="need_set_avatar">Никто не сможет познакомиться с вами без фото. Пожалуйста, загрузите свою фотографию, чтобы продолжить.</string>
+    <string name="need_set_avatar_warning">На фото должны быть именно вы. Все фотографии модерируются.</string>
     <string name="chat_background_text">Входящих сообщений нет</string>
     <string name="entrance">Вход</string>
     <string name="filter_only_online">Только онлайн</string>
