--- a/src/google/res/values-ru/strings.xml
+++ b/src/google/res/values-ru/strings.xml
@@ -1021,4 +1021,6 @@
     <string name="chat_auto_reply_title">Текст сообщения скрыт</string>
     <string name="chat_auto_reply_message">Чтобы открыть и ответить на него, станьте VIP-пользователем</string>
     <string name="chat_auto_reply_button">Стать VIP</string>
+    <string name="take_photo_text_1">Пожалуйста, загрузите свою фотографию, чтобы начать знакомиться.</string>
+    <string name="take_photo_text_2">На фото должны быть именно вы. Все фотографии модерируются.</string>
 </resources>
